@@ -1,6 +1,6 @@
 name = PDF-API2-XS
 author = Rob Scovell <robscovell@48hc.com>
-license = LGPL_2_1
+license = Perl_5
 copyright_holder = Steve Simms
 
 [MetaResources]
