@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Switched the license to be the same terms as Perl 5.
+
+
 1.001     2020-08-31
 
     - Removed -Ofast optimization due to compatibility issues.
